--- a/www/templates/tabs/rockdescription.html
+++ b/www/templates/tabs/rockdescription.html
@@ -96,7 +96,6 @@
                 <select name="{{ field.name }}"
                         ng-model="spot.properties[field.name]"
                         ng-options="choice.name as choice.label for choice in rock_description_choices
-                                | orderBy: 'label'
                                 | filter: { 'list name': field.type.split(' ')[1] }"
                         ng-required="{{ field.required }}">
                 </select>
@@ -107,7 +106,7 @@
                 <span class="input-label">{{field.label}}</span>
                 <span class="item-placeholder"><small>{{ field.hint }}</small></span><br>
                 <ion-checkbox name="{{ field.name }}"
-                              ng-repeat="choice in rock_description_choices | orderBy: 'label' | filter: { 'list name': field.type.split(' ')[1] }"
+                              ng-repeat="choice in rock_description_choices | filter: { 'list name': field.type.split(' ')[1] }"
                               ng-checked="isOptionChecked(field.name, choice.name)"
                               ng-click="toggleChecked(field.name, choice.name)"
                               ng-required="{{ field.required }}">
