updated form surveys and choices

--- a/www/templates/modals/lineModal.html
+++ b/www/templates/modals/lineModal.html
@@ -5,7 +5,7 @@
   </ion-header-bar>
   <ion-content>
     <ion-list ng-controller="ModalCtrl">
-      <ion-item ng-repeat="item in lineTypes" href="#/app/spots/newspot" ng-click="closeModal();setSpotType(item)">
+      <ion-item ng-repeat="item in lineTypes" href="#/app/spots//details" ng-click="closeModal();setSpotType(item)">
         {{item}}
       </ion-item>
     </ion-list>
