--- a/www/templates/spots.html
+++ b/www/templates/spots.html
@@ -7,12 +7,43 @@
             ng-click="sync()">
     </button>
     <button class="button button-icon ion-trash-b" ng-click="clearAllSpots()"></button>
-    <button class="button button-icon ion-plus" ng-click="newSpot()"></button>
+    <!--<button class="button button-icon ion-plus" ng-click="newSpot()"></button>-->
   </ion-nav-buttons>
     <ion-content class="has-header">
+      <div class="item item-divider">
+        Measurements & Observations
+      </div>
       <ion-list>
-        <ion-item ng-repeat="spot in spots" href="#/app/spots/{{spot.properties.id}}/details">
-          {{spot.properties.name}} <small>({{spot.properties.type}})</small>
+        <ion-item ng-repeat="spot in spots | filter: { 'geometry': {'type': 'Point' }} | filter: {'properties': {'group_name': undefined}}"
+                  href="#/app/spots/{{spot.properties.id}}/details">
+          {{spot.properties.name}}
+        </ion-item>
+      </ion-list>
+      <div class="item item-divider">
+        Contacts & Traces
+      </div>
+      <ion-list>
+        <ion-item ng-repeat="spot in spots | filter: { 'geometry': {'type': 'LineString' }} | filter: {'properties': {'group_name': undefined}}"
+                  href="#/app/spots/{{spot.properties.id}}/details">
+          {{spot.properties.name}}
+        </ion-item>
+      </ion-list>
+      <div class="item item-divider">
+        Rock Descriptions
+      </div>
+      <ion-list>
+        <ion-item ng-repeat="spot in spots | filter: { 'geometry': {'type': 'Polygon' }} | filter: {'properties': {'group_name': undefined}}"
+                  href="#/app/spots/{{spot.properties.id}}/rockdescription">
+          {{spot.properties.name}}
+        </ion-item>
+      </ion-list>
+      <div class="item item-divider">
+        Groupings
+      </div>
+      <ion-list>
+        <ion-item ng-repeat="spot in spots | filter: {'properties': {'group_name': '!undefined'}}"
+                  href="#/app/spots/{{spot.properties.id}}/details">
+          {{spot.properties.name}}
         </ion-item>
       </ion-list>
     </ion-content>
