added copy spot feature, bug fixes and error checking for matching spot type to geometry type, removed modals after draw

--- a/www/templates/spots.html
+++ b/www/templates/spots.html
@@ -7,7 +7,7 @@
             ng-click="sync()">
     </button>
     <button class="button button-icon ion-trash-b" ng-click="clearAllSpots()"></button>
-    <!--<button class="button button-icon ion-plus" ng-click="newSpot()"></button>-->
+    <button class="button button-icon ion-plus" ng-click="newSpot()"></button>
   </ion-nav-buttons>
     <ion-content class="has-header">
       <div class="item item-divider">
