--- a/www/templates/tabs/rockdescription.html
+++ b/www/templates/tabs/rockdescription.html
@@ -4,6 +4,7 @@
       <button ng-click="goToSpots();" class="button button-icon icon ion-arrow-left-c"></button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
+      <button ng-click="copySpot();" class="button button-icon icon ion-forward"></button>
       <button ng-click="deleteSpot();" class="button button-icon icon ion-trash-b"></button>
       <button ng-click="submit();" class="button button-icon icon ion-checkmark-circled"></button>
     </ion-nav-buttons>
