--- a/www/templates/tabs/pictures.html
+++ b/www/templates/tabs/pictures.html
@@ -38,14 +38,12 @@
     <div class="item item-divider">
       Photos
     </div>
-    <div class="row responsive-md">
-      <div>
-        <ul>
-          <li ng-repeat="image in spot.images" style="display: inline;">
-            <a><img ng-src="{{image.src}}" width="100" height="100" ng-click="showImages($index)"  /></a>
-          </li>
-        </ul>
-      </div>
+    <div class="row">
+      <ul>
+        <li ng-repeat="image in spot.images" style="display: inline;">
+          <a><img ng-src="{{image.src}}" width="100" height="100" ng-click="showImages($index)"  /></a>
+        </li>
+      </ul>
     </div>
     <div>
       <button ng-click="cameraModal()" class="button button-positive icon-left ion-camera">Add Photo</button>
