--- a/www/templates/spots.html
+++ b/www/templates/spots.html
@@ -11,10 +11,10 @@
   </ion-nav-buttons>
     <ion-content class="has-header">
       <div class="item item-divider">
-        Measurements & Observations
+        Stations
       </div>
       <ion-list>
-        <ion-item ng-repeat="spot in spots | filter: { 'geometry': {'type': 'Point' }} | filter: {'properties': {'group_name': undefined}}"
+        <ion-item ng-repeat="spot in spots | filter: { 'properties': {'type': 'point' }}"
                   href="#/app/spots/{{spot.properties.id}}/details">
           {{spot.properties.name}}
         </ion-item>
@@ -23,25 +23,33 @@
         Contacts & Traces
       </div>
       <ion-list>
-        <ion-item ng-repeat="spot in spots | filter: { 'geometry': {'type': 'LineString' }} | filter: {'properties': {'group_name': undefined}}"
+        <ion-item ng-repeat="spot in spots | filter: { 'properties': {'type': 'line' }}"
                   href="#/app/spots/{{spot.properties.id}}/details">
           {{spot.properties.name}}
         </ion-item>
       </ion-list>
       <div class="item item-divider">
-        Rock Descriptions
+        Rock Descriptions Only
       </div>
       <ion-list>
-        <ion-item ng-repeat="spot in spots | filter: { 'geometry': {'type': 'Polygon' }} | filter: {'properties': {'group_name': undefined}}"
+        <ion-item ng-repeat="spot in spots | filter: { 'properties': {'type': 'polygon' }}"
                   href="#/app/spots/{{spot.properties.id}}/rockdescription">
           {{spot.properties.name}}
         </ion-item>
       </ion-list>
       <div class="item item-divider">
-        Groupings
+        Structure represented by 3D geometry
       </div>
       <ion-list>
-        <ion-item ng-repeat="spot in spots | filter: {'properties': {'group_name': '!undefined'}}"
+        <ion-item>
+          Not implemented yet
+        </ion-item>
+      </ion-list>
+      <div class="item item-divider">
+        Groups
+      </div>
+      <ion-list>
+        <ion-item ng-repeat="spot in spots | filter: {'properties': {'type': 'group'}}"
                   href="#/app/spots/{{spot.properties.id}}/details">
           {{spot.properties.name}}
         </ion-item>
