--- a/www/templates/tabs/georeference.html
+++ b/www/templates/tabs/georeference.html
@@ -1,4 +1,5 @@
-<ion-view title="Spot Info">
+<ion-view>
+  <ion-nav-title>{{ spotTitle }}</ion-nav-title>
   <ion-nav-buttons side="left">
     <button ng-click="goToSpots();" class="button button-icon icon ion-arrow-left-c"></button>
   </ion-nav-buttons>
@@ -13,17 +14,17 @@
       <span ng-show="showDetails">
         <a class="button inline-button button-clear spot-tab-inactive" ng-click="switchTabs('details')">Details</a>
       </span>
-      <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/notes">Notes</a>
-      <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/pictures">Photos</a>
+      <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('notes');">Notes</a>
+      <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('pictures');">Photos</a>
       <a class="button button-clear button-light spot-tab-active" href="#/app/spots/{{spot.properties.id}}/georeference">Georeference</a>
       <span ng-show="showLinks">
-        <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/links">Links</a>
+        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('links');">Links</a>
       </span>
       <span ng-show="showGroups">
-        <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/groups">Groups</a>
+        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('groups');">Groups</a>
       </span>
       <span ng-show="showGroupMembers">
-        <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/groupmembers">Group Members</a>
+        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('groupmembers');">Group Members</a>
       </span>
       <span ng-show="showRockDescription">
         <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('rockdescription');">Rock Description</a>
@@ -35,33 +36,33 @@
   </ion-header-bar>
 
   <ion-content>
-    <div class="item item-divider">
-      Map Representation
+    <div ng-if="mapped">
+      <label class="item item-input item-stacked-label item-text-wrap">
+        <span class="input-label">Geometry</span>
+        <input type="text" disabled ng-model="spot.geometry.type">
+      </label>
+      <label class="item item-input item-stacked-label item-text-wrap" ng-show="showLatLng">
+        <span class="input-label">Latitude</span>
+        <input type="number" ng-model="point.latitude" value={{point.latitude}}>
+      </label>
+      <label class="item item-input item-stacked-label item-text-wrap" ng-show="showLatLng">
+        <span class="input-label">Longitude</span>
+        <input type="number" ng-model="point.longitude" value={{point.longitude}}>
+      </label>
     </div>
-    <label class="item item-input item-stacked-label item-text-wrap">
-      <span class="input-label">Geometry</span>
-      <input type="text" disabled ng-model="spot.geometry.type">
-    </label>
-    <label class="item item-input item-stacked-label item-text-wrap" ng-show="showLatLng">
-      <span class="input-label">Latitude</span>
-      <input type="number" ng-model="point.latitude" value={{point.latitude}}>
-    </label>
-    <label class="item item-input item-stacked-label item-text-wrap" ng-show="showLatLng">
-      <span class="input-label">Longitude</span>
-      <input type="number" ng-model="point.longitude" value={{point.longitude}}>
-    </label>
-    <div>
+    <div ng-if="!mapped" class="padding">
+      This spot has not been mapped yet. Click on the Set from Map button below and be sure to map this feature as a {{spot.geometry.type}}.
+    </div>
       <!-- Map Interaction -->
-      <div class="row responsive-sm">
-        <div class="col">
-          <button ng-click="goToSpot();" ng-hide="hideViewOnMapButton" class="button button-block button-positive icon-left icon ion-eye">View on Map</button>
-        </div>
-        <div class="col">
-          <button ng-click="getLocation();" ng-show="showMyLocationButton" class="button button-block button-positive icon-left ion-pinpoint">Set to My Location</button>
-        </div>
-        <div class="col">
-          <button ng-click="openMap();" ng-hide="hideSetFromMapButton" class="button button-block button-positive icon-left icon ion-map">Set From Map</button>
-        </div>
+    <div class="row responsive-sm">
+      <div class="col" ng-show="mapped" >
+        <button ng-click="goToSpot();" class="button button-positive icon-left icon ion-eye">View on Map</button>
+      </div>
+      <div class="col" ng-show="showMyLocationButton" >
+        <button ng-click="getLocation();" class="button button-positive icon-left ion-pinpoint">Set to My Location</button>
+      </div>
+      <div class="col">
+        <button ng-click="openMap();" class="button button-positive icon-left icon ion-map">Set From Map</button>
       </div>
     </div>
   </ion-content>
