--- a/www/templates/tabs/links.html
+++ b/www/templates/tabs/links.html
@@ -1,4 +1,5 @@
-<ion-view title="Spot Info">
+<ion-view>
+  <ion-nav-title>{{ spotTitle }}</ion-nav-title>
   <ion-nav-buttons side="left">
     <button ng-click="goToSpots();" class="button button-icon icon ion-arrow-left-c"></button>
   </ion-nav-buttons>
@@ -24,25 +25,22 @@
         <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/groupmembers">Group Members</a>
       </span>
       <span ng-show="showRockDescription">
-        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('rockdescription');">Rock Description</a>
+        <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/rockdescription">Rock Description</a>
       </span>
       <span ng-show="showRockSample">
-        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('rocksample');">Rock Sample</a>
+        <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/rocksample">Rock Sample</a>
       </span>
     </ion-scroll>
   </ion-header-bar>
 
   <ion-content>
-    <div class="item item-divider">
-      Links
-    </div>
-    <div>
+    <div class="padding">
       <button ng-click="linkSpot();" class="button button-positive icon-left icon ion-link">Add or Edit Links to Other Spots</button>
     </div>
     <ion-list>
       <ion-item ng-repeat="item in links_selected">
-        <a ng-click="openSpot(item.id);" style="text-decoration:none">{{item.name}}</a> <small>({{ item.type }})</small>
-        &nbsp;&nbsp;&nbsp;&nbsp;<b>{{ item.relationship }}</b> this {{ spot.properties.type }}
+        <a ng-click="openSpot(item.id);" style="text-decoration:none">{{item.name}}</a> <small>({{ spotTypes[item.type] }})</small>
+        &nbsp;&nbsp;&nbsp;&nbsp;<b>{{ item.relationship }}</b> this {{ spotTypes[spot.properties.type] }}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <select ng-model="relationship"
                 ng-options="link_relationships.type for link_relationships in link_relationship.choices"
