added version to about page

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -3,6 +3,10 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <h1>Some text here.</h1>
+    <div class="padding">
+      This app is still in development.
+      <br><br>
+      Version 0.1 - June 11th, 2015
+    </div>
   </ion-content>
 </ion-view>
