change spots list to accordion tyle

--- a/www/templates/modals/allModal.html
+++ b/www/templates/modals/allModal.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
   <ion-header-bar class="bar-dark nav-title-slide-ios7">
-    <h1 class="title">Select a Spot Type</h1>
+    <h1 class="title">Create a New Spot</h1>
     <div class="button button-clear" ng-click="closeModal('allModal')"><span class="icon ion-close"></span></div>
   </ion-header-bar>
   <ion-content>
