--- a/www/templates/tabs/rockdescription.html
+++ b/www/templates/tabs/rockdescription.html
@@ -13,23 +13,23 @@
     <ion-header-bar class="bar-subheader">
       <ion-scroll direction="x" class="wide-as-needed">
         <span ng-show="showDetails">
-          <a class="button inline-button button-clear spot-tab-inactive" ng-click="switchTabs('details')">Details</a>
+          <a class="button inline-button button-clear spot-tab-inactive" ng-click="switchTabs('details', rockDescriptionForm.$pristine)">Details</a>
         </span>
-        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('notes');">Notes</a>
-        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('pictures')">Photos</a>
-        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('georeference')">Georeference</a>
+        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('notes', rockDescriptionForm.$pristine);">Notes</a>
+        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('pictures', rockDescriptionForm.$pristine)">Photos</a>
+        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('georeference', rockDescriptionForm.$pristine)">Georeference</a>
         <span ng-show="showLinks">
-          <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('links')">Links</a>
+          <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('links', rockDescriptionForm.$pristine)">Links</a>
         </span>
         <span ng-show="showGroups">
-          <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('groups')">Groups</a>
+          <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('groups', rockDescriptionForm.$pristine)">Groups</a>
         </span>
         <span ng-show="showGroupMembers">
-          <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('groupmembers')">Group Members</a>
+          <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('groupmembers', rockDescriptionForm.$pristine)">Group Members</a>
         </span>
         <a class="button button-clear button-light spot-tab-active" href="#/app/spots/{{spot.properties.id}}/rockdescription">Rock Description</a>
         <span ng-show="showRockSample">
-          <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('rocksample');">Rock Sample</a>
+          <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('rocksample', rockDescriptionForm.$pristine);">Rock Sample</a>
         </span>
       </ion-scroll>
     </ion-header-bar>
