--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -6,7 +6,7 @@
     <div class="padding">
       This app is still in development.
       <br><br>
-      Version 0.3.1 - June 18th, 2015
+      Version 0.4.0 - July 2nd, 2015
     </div>
   </ion-content>
 </ion-view>
