--- a/www/templates/tabs/details.html
+++ b/www/templates/tabs/details.html
@@ -68,6 +68,7 @@
                           ng-options="choice.name as choice.label for choice in choices
                                 | filter: { 'list name': field.type.split(' ')[1] }"
                           ng-required="{{ field.required }}">
+                          <option value=""></option>
                   </select>
                 </label>
               </div>
