--- a/www/templates/spots.html
+++ b/www/templates/spots.html
@@ -2,12 +2,12 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-	<ion-nav-buttons side="right">
+  <ion-nav-buttons side="right">
     <button ng-class="{'button button-icon ion-loop': isOnlineLoggedIn(), 'button button-icon ion-alert-circled': !isOnlineLoggedIn()}"
             ng-click="sync()">
     </button>
-    <button class="button button-icon ion-trash-b" ng-click="clearAllSpots()"></button>
     <button class="button button-icon ion-plus" ng-click="newSpot()"></button>
+    <button ng-click="showActionsheet()" class="button button-icon icon ion-arrow-up-b"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
     <div class="row responsive-sm">
@@ -43,5 +43,5 @@
         </ion-list>
       </div>
     </div>
-    </ion-content>
+  </ion-content>
 </ion-view>
