created a spot group from lassoed spots

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -6,7 +6,8 @@
     <div class="padding">
       This app is still in development.
       <br><br>
-      Version 0.4.2 - July 9th, 2015
+      Version 0.5.0 - July 10th, 2015<br>
+      - Added ability to groups spots from map
     </div>
   </ion-content>
 </ion-view>
