add functionality to use an image as a basemap

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,11 +12,14 @@
     </header>
     <ion-content class="has-header bar-dark">
       <ion-list>
+        <ion-item nav-clear menu-close href="#/app/spots">
+          Spots
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/map">
           Map
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/spots">
-          Spots
+        <ion-item nav-clear menu-close href="#/app/image-maps">
+          Image Maps
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/offlinemap">
           Offline Maps
