--- a/www/templates/image-map.html
+++ b/www/templates/image-map.html
@@ -1,5 +1,5 @@
 <ion-view>
-  <ion-nav-title>{{ imageMap.name }}</ion-nav-title>
+  <ion-nav-title>{{ imageMap.title }}</ion-nav-title>
   <ion-nav-buttons side="left">
     <button ng-click="goToImageMaps();" class="button button-icon icon ion-arrow-left-c"></button>
   </ion-nav-buttons>
