--- a/www/templates/tabs/pictures.html
+++ b/www/templates/tabs/pictures.html
@@ -5,8 +5,17 @@
     </div>
     <div class="row">
       <ul>
-        <li ng-repeat="image in spot.images" style="display: inline;">
+        <li ng-repeat="image in spot.images" class="images-container">
           <a><img ng-src="{{image.src}}" width="100" height="100" ng-click="showImages($index)"  /></a>
+          <input type="checkbox"
+                 class="annotate-checkbox"
+                 id="check + {{$index}}"
+                 ng-click="annotateChecked(image)"
+                 ng-checked="image.annotated"/>
+          <span class="annotate-checkbox-label">Annotate?</span>
+          <button ng-click="goToImageMap(image)"
+                  ng-show="image.annotated"
+                  class="button icon ion-map button-small image-map"></button>
         </li>
       </ul>
     </div>
