--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -4,9 +4,32 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
     <div class="padding">
-      This app is still in development.
+      Strabo Mobile is a part of a larger Data System for Structural Geology and Tectonics (SG&T).
+      It consists of a database, a web site and a mobile app.
+      The entire Strabo project is still in development and as such the mobile app is not yet in the Google Play Store or the iOS App Store but can be tested by accessing it as described below.
       <br><br>
-      Version 0.6.0
+      <h5>Accessing the main site</h5>
+      <hr>
+      <a href="#" onclick="window.open('http://strabospot.org/', '_system', 'location=yes'); return false;">http://strabospot.org/</a>
+      <br><br>
+      <h5>Downloading the mobile app</h5>
+      <hr>
+      <a href="#" onclick="window.open('https://build.phonegap.com/apps/1289076/share', '_system', 'location=yes'); return false;">https://build.phonegap.com/apps/1289076/share</a>
+      <br><br>
+      Note for iOS users:<br>
+      The link above will not however work for iOS devices unless your device has been previously registered as a valid testing device for this particular project.
+      The app can be installed on iOS devices through the use of the Ionic View app. Search the App Store for Ionic View. Preview a Shared App and use the id <b>90b11d0a</b>.
+      Some functionality is limited when using the app through Ionic View however, such as the camera/photos.
+      <br><br>
+
+      <h5>Bugs, Feature Requests and Other Issues</h5>
+      <hr>
+      - The preferred method of reporting is to post an issue at <a href="#" onclick="window.open('https://github.com/StraboSpot/strabo-mobile/issues', '_system', 'location=yes'); return false;">https://github.com/StraboSpot/strabo-mobile/issues</a>.
+      Please post one issue per bug/issue/feature request and include the version number.
+      <br>
+      - Alternatively, you can send an email to <a href="mailto:developer@azgs.az.gov?Subject=StraboMobile0.6.2" target="_top">developer@azgs.az.gov</a>.
+      <br><br>
+      Current Version 0.6.2
     </div>
   </ion-content>
 </ion-view>
