--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -30,9 +30,9 @@
         <ion-item nav-clear menu-close href="#/app/settings">
           Settings
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/debug">
+       <!-- <ion-item nav-clear menu-close href="#/app/debug">
           Debug (for testing only)
-        </ion-item>
+        </ion-item>-->
         <ion-item nav-clear menu-close href="#/app/about">
           About
         </ion-item>
