--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -2,7 +2,7 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <ion-content class="has-header">
-    <h1>Search</h1>
+  <ion-content class="has-header padding">
+    In progress ....
   </ion-content>
 </ion-view>
